<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="check_KYC">Check KYC</string>

    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="app_name">Aadhaar Reader</string>
    <string name="table_heading">Items</string>
    <string name="table_heading_detail">Value</string>
    <string name="welcome_message">Scan your aadhaar card to view information</string>
    <string name="top_bar_message">SCAN AADHAAR CARD</string>
    <string name="scan_new_card">Scan New Aadhaar Card</string>
    <string name="view_saved_card">View Saved Aadhaar Cards</string>
    <string name="label_name">Name</string>
    <string name="label_uid">UID</string>
    <string name="label_gender">GENDER</string>
    <string name="label_yob">YEAR OF BIRTH</string>
    <string name="label_co">CARE OF</string>
    <string name="label_vtc">VILLAGE TEHSIL</string>
    <string name="label_po">POST OFFICE</string>
    <string name="label_dist">DISTRICT</string>
    <string name="label_state">STATE</string>
    <string name="label_pc">POSTAL CODE</string>
    <string name="label_save">SAVE</string>
    <string name="label_cancel">CANCEL</string>
    <string name="no_saved_card">There Is no Saved Aadhar Card</string>
    <string name="label_home">HOME</string>
    <string name="label_delete">DELETE</string>
</resources>
