<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.google.android.gms.samples.vision.ocrreader.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text= "@string/ocr_header"
        android:id="@+id/status_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_value"
        android:layout_below="@+id/status_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignRight="@+id/status_message"
        android:layout_alignEnd="@+id/status_message" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:id="@+id/use_flash"
        android:checked="false"
        android:layout_below="@+id/auto_focus"
        android:layout_alignLeft="@+id/auto_focus"
        android:layout_alignStart="@+id/auto_focus"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_focus"
        android:id="@+id/auto_focus"
        android:checked="true"
        android:layout_below="@+id/status_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:inputType="textCapCharacters"
        android:hint="Enter PAN Number"
        android:text=""
        android:ems="10"
        android:background="#fff"
        android:textColor="#000"
        android:id="@+id/panCardEditText"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/text_value"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/panCardEditText"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_text"
            android:id="@+id/read_text"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/panCardEditText"
            android:layout_alignStart="@+id/panCardEditText"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_KYC"
            android:id="@+id/check_KYC"
            android:layout_alignBottom="@+id/read_text"
            android:layout_alignRight="@+id/panCardEditText"
            android:layout_alignEnd="@+id/panCardEditText"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
